--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Lato', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    margin: 0;
+}
 
 * {
     box-sizing: border-box;
