--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
 body {
-    font-family: 'Lato', sans-serif;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Raleway', sans-serif;
     padding: 0;
     margin: 0;
 }
 
 * {
     box-sizing: border-box;
+  }
+
+  .menu {
+    float: right;
+    overflow: hidden;
   }
