--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,56 @@
-body {
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
+*{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-* {
-    box-sizing: border-box;
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+nav {
+    flex: 1;
+    text-align: right;
+}
+
+nav ul{
+    display: inline-block;
+    list-style-type:lower-roman;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:link {
+    color: rgb(15, 15, 15);
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: #0065FC;
+    text-decoration: overline;
   }
 
-  .menu {
-    float: right;
-    overflow: hidden;
-  }
+
+.container {
+    margin: auto;
+    padding: 0 25px;
+}
+
+
+.header {
+    margin-top: 10px;
+}
