--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,13 @@ a:link {
     color: rgb(15, 15, 15);
   }
   
+  
   /* mouse over link */
   a:hover {
     color: #0065FC;
     text-decoration: overline;
   }
+
 
 
 .container {
@@ -58,4 +60,53 @@ a:link {
 .row {
    padding-left: 20px;
 }
+
+.topnav {
+    overflow: hidden;
+    display: flex;
+  }
+  
+  .topnav input[type=text] {
+    padding: 10px;
+    margin-top: 15px;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+  }
+  
+  .topnav .search-container button {
+    float: right;
+    padding: 10px 15px;
+    margin-top: 15px;
+    margin-right: 16px;
+    background: #0065FC;
+    color: white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 15px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .topnav .search-container button:hover {
+    background: #DEEBFF;
+    color: black;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav .search-container {
+      float: none;
+    }
+    .topnav a, .topnav input[type=text], .topnav .search-container button {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    .topnav input[type=text] {
+      border: 1px solid #ccc;  
+    }
+  }
 
