--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ nav {
     text-align: right;
 }
 
+
 nav ul{
     display: inline-block;
     list-style-type:lower-roman;
@@ -27,24 +28,33 @@ nav ul{
 nav ul li {
     display: inline-block;
     margin-right: 20px;
+    position: relative;
 }
 
-a {
+nav a {
     text-decoration: none;
     color: black;
 }
 
-a:link {
-    color: rgb(15, 15, 15);
-  }
-  
-  
-  /* mouse over link */
-  a:hover {
+   
+  nav a:hover {
     color: #0065FC;
-    text-decoration: overline;
   }
 
+  nav a::before {
+    content: '';
+    display: block;
+    height: 3px;
+    background-color:#0065FC;
+    position: absolute;
+    bottom: 60px;
+    width: 0%;
+    transition: all case-in-out 250ms;
+  }
+
+  nav a:hover::before {
+    width: 100%;
+  }
 
 
 .container {
@@ -102,22 +112,7 @@ a:link {
     color: black;
   }
   
-  @media screen and (max-width: 600px) {
-    .topnav .search-container {
-      float: none;
-    }
-    .topnav a, .topnav input[type=text], .topnav .search-container button {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    .topnav input[type=text] {
-      border: 1px solid #ccc;  
-    }
-  }
+  
 
   .filter {
     display: flex;
@@ -125,7 +120,7 @@ a:link {
 
   }
 
-  .filter .label-filter {
-    
+  .filter .filterbox {
+    display: inline-flexbox;
   }
 
