--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ nav a {
    font-weight: bold;
 }
 
+  /* searchBar */
+
 .topnav {
     overflow: hidden;
     display: flex;
@@ -112,15 +114,30 @@ nav a {
     color: black;
   }
   
+  /* FILTERS */
   
+.filters {
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
-  .filter {
-    display: flex;
-    padding: 30px 0;
+.filters * {
+  display: inline-block;
+}
 
-  }
+.filters label {
+  padding: 0.5rem 1rem;
+  margin-bottom: 0.25rem;
+  border-radius: 2rem;
+  min-width: 50px;
+  line-height: normal;
+  cursor: pointer;
+  transition: all 0.1s;
+}
 
-  .filter .filterbox {
-    display: inline-flexbox;
-  }
+.filters label:hover {
+  background: var(--green);
+  color: var(--white);
+}
+
 
