--- a/css/style.css
+++ b/css/style.css
@@ -115,29 +115,13 @@ nav a {
   }
   
   /* FILTERS */
-  
-.filters {
-  text-align: center;
-  margin-bottom: 2rem;
+
+.filter_container {
+  display: flex;
+  margin: 30px auto;
 }
+  
 
 .filters * {
   display: inline-block;
 }
-
-.filters label {
-  padding: 0.5rem 1rem;
-  margin-bottom: 0.25rem;
-  border-radius: 2rem;
-  min-width: 50px;
-  line-height: normal;
-  cursor: pointer;
-  transition: all 0.1s;
-}
-
-.filters label:hover {
-  background: var(--green);
-  color: var(--white);
-}
-
-
