--- a/css/style.css
+++ b/css/style.css
@@ -142,12 +142,28 @@ nav a {
   color: #0065FC;
 }
 
-.big-conainer {
-  margin: 30px 20px;
+.big-container {
+  max-width: 1000px;
+  margin: 30px;
   background-color: #F2F2F2;
 }
 
-.big-conainer h3 {
-  padding: 20px;
+.col-4 {
+  flex-basis: 25%;
+  padding: 10px;
+  min-width: 200px;
+  margin-bottom: 50px;
+  transition: transform 0.5s;
+  cursor: pointer;
 }
 
+.col-4 img {
+  width: 200px;
+  height: 110px;
+}
+
+.title {
+  margin-left: 30px;
+  position: relative;
+  padding: 30px 0;
+}
