--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,11 @@ nav a {
   color: #0065FC;
 }
 
+/* center-left container */
 .center-container {
   margin: 10px;
+  display: flex;
+  flex-wrap: wrap-reverse;
   flex-shrink: 1;
 }
 
@@ -152,7 +155,7 @@ nav a {
   line-height: 60px;
 }
 
-.big-container {
+.left-container {
   margin: 20px;
   background-color: #F2F2F2;
   max-width: 900px;
