--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,8 @@ nav a {
 /* center container */
 .center-container {
   margin: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .title {
@@ -154,11 +156,13 @@ nav a {
 
 .left-container {
   margin: 20px;
+  padding: 5px 10px;
   background-color: #F2F2F2;
   max-width: 900px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  border-radius: 20px;
 }
 
 .col {
@@ -189,6 +193,7 @@ nav a {
 .right-container {
   margin: 20px;
   background-color: #F2F2F2;
+  border-radius: 20px;
   max-width: 400px;
   display: flex;
   flex-direction: column;
@@ -197,10 +202,28 @@ nav a {
 }
 
 .col-2 {
-  
-
+  background-color: white;
+  width: 350px;
+  height: 150px;
+  border-radius: 30px;
+  flex-basis:auto;
+  padding: 10px;
+  margin: 60px 20px;
+  cursor: pointer;
+  box-shadow: 5px 5px 5px rgb(211, 210, 210);
 }
 
-.col-2 img {
 
+.col-2 img {
+  width: 120px;
+  height: 140px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 25px;;
+  padding-bottom: 10px;
+}
+
+.col-info {
+  display: flex;
+  flex-direction: column;
+  
 }
