--- a/css/style.css
+++ b/css/style.css
@@ -202,10 +202,11 @@ nav a {
   background-color: #F2F2F2;
   border-radius: 20px;
   max-width: 400px;
+  max-height: 700px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding-bottom: 10px;;
+  padding-bottom: 10px;
 
 }
 
@@ -217,7 +218,7 @@ nav a {
   display: flex;
   flex-flow: row;
   padding: 10px;
-  margin: 60px 20px;
+  margin: 30px 20px;
   cursor: pointer;
   box-shadow: 5px 5px 5px rgb(211, 210, 210);
 }
@@ -237,8 +238,16 @@ nav a {
   
 }
 
+.col2-info h4 {
+  padding: 10px;
+}
+
+.col2-info p {
+  padding: 10px;
+}
+
 .star2{
   color: #0065FC;
-
+  padding: 15px 10px 0 10px;
 }
 
