--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,17 @@ nav a {
    font-weight: bold;
 }
 
+.row p {
+  padding: 5px 0;
+  font-weight: 300;
+}
+
   /* searchBar */
 
 .topnav {
     overflow: hidden;
     display: flex;
+    margin: 10px;
   }
   
   .topnav input[type=text] {
@@ -118,16 +124,36 @@ nav a {
 
 .filter_container {
   display: flex;
-  margin: 30px auto;
+  margin: 40px 10px;
 }
 
 .filter_container h4 {
-  padding-right: 20px;
+  padding-right: 30px;
 }
   
 
 .filters * {
   display: inline-block;
+}
+
+.filter-bar label {
+  border-style: solid;
+  border-color: rgb(218, 218, 218);
+  width: 150px;
+  font-weight: bold;
+  text-align: center;
+  padding: 8px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.filter-bar i {
+  border-style: solid;
+  border-color: #DEEBFF;
+  border-radius: 20px;
+  padding: 10px;
+  background-color: #DEEBFF;
+  
 }
 
 
