--- a/css/style.css
+++ b/css/style.css
@@ -122,51 +122,67 @@ nav a {
   
 /* FILTERS */
 
-.filter_container {
+.sectionFiltres{
   display: flex;
-  margin: 40px 10px;
+  margin-top: 20px;
 }
 
-.filter_container h4 {
-  padding-right: 30px;
-}
-  
 
-.filters * {
-  display: inline-block;
+.sectionFiltres > div{
+  display: flex;
 }
 
-.filter-bar label {
-  border-style: solid;
-  border-color: rgb(218, 218, 218);
-  width: 150px;
+
+.filtres{
+  display: flex;
+  padding: 0 15px;
+  align-items: center;
+  height: 40px;
   font-weight: bold;
-  text-align: center;
-  padding: 8px;
-  border-radius: 20px;
+  border-radius: 25px;
+  border: 1px solid #ccc;
   cursor: pointer;
+  margin: 20px 10px;
 }
 
-.filter-bar i {
-  border-style: solid;
-  border-color: #DEEBFF;
-  border-radius: 20px;
+
+.filtres p{
   padding: 10px;
+}
+
+
+.iconFiltres{
   background-color: #DEEBFF;
-  
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  border-radius: 20px;
+  color: #0065fc;
+  margin-left: -17px;
+}
+
+
+h4 {
+  line-height: 5;
+  font-weight: bold;
+  margin-right: 15px;
 }
 
 
  /* paragraph under filter */
 .parag {
   display: flex;
-  margin: 0 25px;
+  margin: 20px 0px;
 }
 
 .parag label {
   padding-right: 10px;
   color: #0065FC;
 }
+
 
 /* center container */
 .center-container {
