--- a/css/style.css
+++ b/css/style.css
@@ -10,27 +10,30 @@ body {
 }
 
 .marginSides{
-  margin: 0 50px;
+  margin: 0 20px;
 }
+
 
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 
-h2, h3, p{
-  font-family: 'Raleway', sans-serif;
+
+li {
+  list-style: none;
 }
 
 
-.backgroundGrid{
+.backgroundGrid {
   background-color: #F2F2F2;
   border-radius: 20px;
 }
 
 
-.backgroundBlank{
+.backgroundBlank {
   background-color: white;
   border-radius: 20px;
 }
@@ -233,9 +236,9 @@ h2.accomodationTitle {
   padding: 30px;
 }
 
-.captionOfAcc ,{
+.captionOfAcc {
   padding: 20px 0 0 4%;
-  font-weight: 800;
+  font-weight: 400;
 }
 
 .mainContentOfAcc {
@@ -266,12 +269,12 @@ h2.accomodationTitle {
 }
 
 
-.contentAcc > figure {
+.contentAcc figure {
   display: contents;
 }
 
 
-.contentAcc > a {
+.contentAcc a {
   padding: 5px;
 }
 
@@ -286,7 +289,7 @@ h2.accomodationTitle {
 
 .imageAcc {
   width: 100%;
-  height: 100px;
+  height: 130px;
   object-fit: cover;
 }
 
@@ -327,11 +330,14 @@ p.captionOfAcc {
 .mainContentPopular {
   display: flex;
   flex-direction: column;
+  font-weight: 500;
 }
 
 
 .contentPopular {
   margin: 20px;
+  height: 150px;
+  width: 370px;
   display: flex;
   box-shadow: 5px 5px 5px #d1d1d1;
 }
@@ -346,6 +352,14 @@ p.captionOfAcc {
 .contentPopular figure {
   margin: 0;
   display: flex;
+  text-align: left;
+}
+
+
+
+.contentPopular b {
+  font-size: 17px;
+
 }
 
 
@@ -354,32 +368,38 @@ p.captionOfAcc {
   border-bottom-left-radius: 10px;
   margin: 5px 10px 5px 5px;
   width: 50%;
+  display: flex;
 }
 
 
 .imgPopular {
-  width: 100%;
+  width: 95px;
   height: 100%;
+  margin: 3px;
+  padding-bottom: 5px;
   object-fit: cover;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .captionPopular {
-  padding: 0 10px;
+  padding: 0px 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 50%;
 }
 
 
-.captionPopular > p {
+.captionPopular p {
   font-size: 15px;
+  width: 200px;
 }
 
 
-.captionPopular > ul {
+.captionPopular ul {
   display: flex;
   padding: 0;
+  color: #0065FC;
 }
 
 
