set the posotions of blocks on activities

--- a/css/style.css
+++ b/css/style.css
@@ -413,9 +413,47 @@ p.captionOfAcc {
 }
 
 
-.mainContentActivites{
+.mainContentActivity {
   display: flex;
 }
+
+.secondActivityBlock,
+.fourthActivityBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.firstActivityBlock,
+.thirdActivityBlock,
+.contentSmall1,
+.contentSmall2,
+.contentSmall3,
+.contentSmall4 {
+    box-shadow: 0px 0px 20px lightgrey;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+
+.firstActivityBlock:hover,
+.thirdActivityBlock:hover,
+.contentSmall1:hover,
+.contentSmall2:hover,
+.contentSmall3:hover,
+.contentSmall4:hover {
+transform: scale(1.05);
+transition: 0.3s;
+}
+
+
+.firstActivityBlock,
+.secondActivityBlock,
+.thirdActivityBlock {
+    margin-right: 20px;
+}
+
 
 
 
