--- a/css/style.css
+++ b/css/style.css
@@ -408,10 +408,14 @@ p.captionOfAcc {
 
 /* ACTIVITES  */
 
-#activites{
+#activites {
   padding-top: 30px;
 }
 
+h2 {
+  margin: 30px 0;
+  font-size: 23px;
+}
 
 .mainContentActivity {
   display: flex;
@@ -454,43 +458,55 @@ p.captionOfAcc {
   margin-right: 20px;
 }
 
-.contentSmall1{
+.contentSmall1 {
   height: 60%;
 }
 
 
-.contentSmall2{
+.contentSmall2 {
   height: 30%;
 }
 
 
 .contentSmall3,
-.contentSmall4{
+.contentSmall4 {
   height: 45%;
 }
 
-.blockFigureLarge{
+.blockFigureLarge {
   margin: 0;
   height: 89%;
 }
 
 
-.blockFigureSmall1{
+.blockFigureSmall1 {
   height: 80%;
 }
 
 
-.blockFigureSmall2{
+.blockFigureSmall2 {
   margin: 0;
   height: 63%;
 }
 
 
 .blockFigureSmall3,
-.blockFigureSmall4{
+.blockFigureSmall4 {
   height: 75%;
 }
 
+.imgActivity {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.textActivity {
+  padding: 1em;
+  color: black;
+  font-weight: bold;
+}
 
 
 
