--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,8 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 600px;
+  width: 950px;
 }
 
 
@@ -443,6 +445,7 @@ h2 {
   border-radius: 20px;
   overflow: hidden;
   margin: 20px 0;
+  height: 560px;
 }
 
 
@@ -460,7 +463,7 @@ h2 {
 .firstActivityBlock,
 .secondActivityBlock,
 .thirdActivityBlock {
-  margin-right: 20px;
+  margin-right: 30px;
 }
 
 .contentSmall1 {
@@ -469,18 +472,16 @@ h2 {
 
 
 .contentSmall2 {
-  height: 30%;
+  height: 40%;
 }
 
 
 .contentSmall3,
 .contentSmall4 {
   height: 45%;
-  margin: 20px 0;
 }
 
 .blockFigureLarge {
-  margin: 0;
   height: 93%;
 }
 
@@ -498,7 +499,7 @@ h2 {
 
 .blockFigureSmall3,
 .blockFigureSmall4 {
-  height: 83%;
+  height: 85%;
 }
 
 .imgActivity {
@@ -512,6 +513,7 @@ h2 {
   padding: 1em;
   color: black;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 
