start css footer

--- a/css/style.css
+++ b/css/style.css
@@ -518,6 +518,17 @@ h2 {
 }
 
 
+/* POPULAR */
+footer {
+  display: flex;
+  background-color: #F2F2F2;
+  margin-top: 50px;
+  padding: 20px;
+}
+
+
+
+
 
 
 
