--- a/css/style.css
+++ b/css/style.css
@@ -523,7 +523,7 @@ footer {
   display: flex;
   background-color: #F2F2F2;
   margin-top: 50px;
-  padding: 20px;
+  padding: 50px;
 }
 
 .about, .ourAcc {
@@ -534,6 +534,19 @@ footer {
   flex-grow: 2;
 }
 
+footer h3 {
+  margin-bottom: 10px;
+}
+
+
+footer li {
+  list-style: none;
+}
+
+
+footer ul {
+  line-height: 2;
+}
 
 
 
